Bug 99255 - Calc crashing on Undo after Spell Correction
Summary: Calc crashing on Undo after Spell Correction
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: All All
: high major
Assignee: Arul Michael
URL:
Whiteboard: target:5.2.0 target:5.1.4
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2016-04-12 22:44 UTC by Susobhan Ghosh
Modified: 2016-10-25 19:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with symbols (8.63 KB, text/plain)
2016-05-01 17:09 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Susobhan Ghosh 2016-04-12 22:44:20 UTC
Steps to reproduce - 
1) Open Calc.
2) Add a few words with errors to the sheet.
3) Press F7 - spell checker dialog.
4) Hit correct or correct all to correct mistake.
5) Press Ctrl-Z.

And Calc crashes.

Writer and Impress don't crash though.
Comment 1 Buovjaga 2016-04-23 16:22:09 UTC
If it still crashes with latest build, can you get a backtrace: https://wiki.documentfoundation.org/QA/BugReport/Debug_Information
Comment 2 raal 2016-04-29 09:39:04 UTC
I can confirm with Version: 5.2.0.0.alpha0+ and 4.5; win7

regression, no crash in Version 4.0.0.3
Comment 3 Julien Nabet 2016-05-01 17:09:30 UTC
Created attachment 124765 [details]
bt with symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.

I attached a bt with symbols.
Comment 4 Julien Nabet 2016-05-08 07:41:16 UTC
Arul: since you assigned yourself this bug, let's put this bug to ASSIGNED! :-)
Comment 5 Arul Michael 2016-05-16 10:43:48 UTC
Submitting the following patch as a fix.

https://gerrit.libreoffice.org/25030

Thanks
Comment 6 Eike Rathke (retired, only occasionally showing up) 2016-05-17 20:53:46 UTC
Commit notification seems to be out of order today, so.. we have
https://gerrit.libreoffice.org/25030 pushed to master
https://gerrit.libreoffice.org/25070 pushed to 5-1
Comment 7 Julien Nabet 2016-05-17 20:57:54 UTC
So let's put this one to FIXED then.
Thank you Arul!