tdf#99255 Calc crashing on Undo after Spell Correction

Avoiding null pointers being set for ScPostit* while
creating the undo document during spell check.

Change-Id: Ieb09cb2cee1c030f275eb5030dd779d543753c8b
Reviewed-on: https://gerrit.libreoffice.org/25030
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 2d15020ea29d5541d1c44ff44a06eb5bcb35c52e)